# tf-logging-sdk

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  统一日志SDK接入指南.md  统一日志SDK设计说明.md  统一日志SDK验收记录.md
examples/: minimal_example.py  self_check.py
src/tf_logging_sdk/: __init__.py  config.py  context.py  filters.py  formatter.py  handlers.py  masking.py
